perf: prevent invisible text during loading

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,27 +61,33 @@ body {
 
 @font-face {
   font-family: 'Basis Grotesque Pro';
-  src: local('Basis Grotesque Pro'), local('Basis Grotesque Pro'),
+  src: local('BasisGrotesque Pro'),
     url(https://assets.every.org/every-month/BasisGrotesque-Regular-Pro.woff2)
-      format('woff2');
+      format('woff2'),
+    local('Helvetica Neue'), local('system'), local('sans-serif');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Basis Grotesque Pro';
-  src: local('Basis Grotesque Pro'), local('Basis Grotesque Pro'),
+  src: local('BasisGrotesque Pro'),
     url(https://assets.every.org/every-month/BasisGrotesque-Bold-Pro.woff2)
-      format('woff2');
+      format('woff2'),
+    local('Helvetica Neue'), local('system'), local('sans-serif');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Basis Grotesque Pro';
-  src: local('Basis Grotesque Pro'), local('Basis Grotesque Pro'),
+  src: local('BasisGrotesque Pro'),
     url(https://assets.every.org/every-month/BasisGrotesque-Medium-Pro.woff2)
-      format('woff2');
+      format('woff2'),
+    local('Helvetica Neue'), local('system'), local('sans-serif');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
